# django-tinymce

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  CODE_OF_CONDUCT.rst  CONTRIBUTORS.rst  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  README.txt  admin.py  check_encoding.sh  metadata.py  profile  pyproject.toml  requirements.txt  runtests.py  setup.cfg  setup.py  snippet.sc  tox.ini  utils.py
.github/workflows/: lint.yml  release.yml  test.yml
docs/: Makefile  conf.py  history.rst  index.rst  installation.rst  mathjax.rst  usage.rst
docs/.build/doctrees/: environment.pickle  history.doctree  index.doctree  installation.doctree  usage.doctree
docs/.build/html/: .buildinfo  history.html  index.html  installation.html  objects.inv  search.html  searchindex.js  searchindex.json  usage.html
docs/.templates/: layout.html
testproject/: README.txt  settings.py
testproject/templates/flatpages/: default.html
testproject/testapp/: __init__.py  admin.py
tests/: conftest.py  manage.py  settings.py  test_basic_functionality.py  test_callbacks.py  test_cleanup_output.py  test_compressor.py  test_content_style.py  test_general.py  test_javascript.py  test_models.py  test_settings.py  test_static_files.py  test_ui.py  test_undo_redo.py  test_url.py  test_views.py  test_visual_aids.py  test_widget.py  test_widgets.py
tests/testapp/: admin.py  forms.py  models.py  settings.py  urls.py
tests/testapp/migrations/: 0001_initial.py  0002_testmodel.py
testtinymce/: admin.py  manage.py  models.py  requirements.txt  settings.py  staticfiles_settings.py  staticfiles_urls.py  urls.py
testtinymce/migrations/: 0001_initial.py
testtinymce/testapp/: admin.py  models.py
testtinymce/testapp/migrations/: 0001_initial.py
tinymce/: README.txt  admin.py  compressor.py  conf.py  models.py  profiles.py  settings.py  urls.py  utils.py  views.py  widgets.py
tinymce/media/: tiny_mce_gzip.js
tinymce/media/tiny_mce/: tiny_mce.js  tiny_mce_src.js
tinymce/static/django_tinymce/: admin_tinymce.css  django_tinymce.js  init_tinymce.js
tinymce/static/tiny_mce/: tiny_mce_src.js  tinymce.dev.js  tinymce.jquery.dev.js  (+1 more)
tinymce/templatetags/: __init__.py  tinymce_tags.py
tinymce/tests/: models.py  test_compressor.py  test_models.py  test_templatetags.py  test_views.py  test_widgets.py
(+1444 files in other folders)
